# TSMP2

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE.txt  README.md  autom_builds.sh  build_TSMP.sh  build_eCLM-ICON.sh  build_eCLM-ParFlow.sh  build_tsmp2.sh  build_tsmp_pdaf.bsh  config_autom_builds.in  readme_autom_builds.txt
.github/workflows/: CI.yml  docs.yml
bldsva/: build_tsmp.bsh  build_tsmp.ksh
bldsva/intf_DA/pdaf/arch/: build_interface_pdaf.ksh
bldsva/intf_oas3/: common_build_interface.ksh
bldsva/machines/: config_DEEP.ksh  config_GENERIC_X86.ksh  config_JURECA.ksh  config_JUSUF.ksh  config_JUWELS.ksh
cmake/: BuildCLM3.5.cmake  BuildCOSMO.cmake  BuildICON.cmake  BuildOASIS3MCT.cmake  BuildPDAF.cmake  BuildPDAFFRAMEWORK.cmake  BuildPDAFINTERFACE.cmake  BuildPDAFMODEL.cmake  BuildParFlow.cmake  BuildeCLM.cmake  FindHypre.cmake  FindMPIFortran.cmake  FindNetCDF.cmake  FindOASIS3MCT.cmake  FindPnetCDF.cmake  FindecCodes.cmake  Utils.cmake
docs/: INDEX.md  Makefile  README.md  _config.yml  _toc.yml  requirements.txt
docs/building_TSMP2/: Quickstart.md  README.md
docs/introduction_to_TSMP2/: introduction.md
docs/users_guide/building_TSMP2/: BuildingTSMP2wCMake.md  Quickstart.md  README.md
docs/users_guide/introduction_to_TSMP2/: README.md  introduction.md
env/: default.2025.env  jsc.2022_Intel.sh  jsc.2023.intel.psmpi  jsc.2023_Intel.ksh  jsc.2023_Intel.sh  jsc.2024.gnu.openmpi_jureca-gh  jsc.2024.intel.psmpi  jsc.2024_Intel.sh  jsc.2025.gnu.openmpi  jsc.2025.gnu.psmpi  jsc.2025.intel.psmpi  jsc.2025.nvhpc.openmpi  jsc.2025.nvhpc.psmpi  jsc.2026.gnu.openmpi  jsc.2026.nvhpc.openmpi  jsc.2026.nvhpc.psmpi  ubuntu.gnu.openmpi  uni-bonn.gnu.openmpi
scripts/ci/: autom_builds.sh  readme_autom_builds.txt
